--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,4 @@
 @import 'programs.css';  /* 프로그램 페이지 */
 @import 'about.css';     /* 소개 페이지 */
 @import 'teacher.css';   /* 교원연수 페이지 */
+@import 'career.css';    /* 진로/진학 페이지 */
